              pointer with void* arguments, and the callback now takes its
              link by rvalue (not pointer).  Moreover, it no longer receives
              an extra null call once the enumeration has finished.
            - Routines fromPlantri() and flype() now return by value (not
              pointer), and throw exceptions on error instead of returning null.
        Class ModelLinkGraphCells:
            - New typedef ArcIterator, which is returned by begin() and end().
        Class NativeInteger<...>:
            - New do-nothing routines isInfinite() and tryReduce(), for
              compatibility with Integer and LargeInteger.
            - Added a global swap() to complement the member swap().
            - Changed divisionAlg() to return a pair instead of using
              reference arguments.  The old version is kept but deprecated.
        Class NewFunction<...>:
            - Removed completely.
        Class NNativeLong:
            - Renamed to NativeLong.  The old name is a deprecated typedef.
        Class NormalEncoding:
            - New class to describe how the internal integer vector is encoded.
        Class NormalInfo:
            - This used to be a template class full of compile-time constants.
              It is now a non-templated class filled with static functions,
              which are also constexpr (so you can still use them at
              compile time if needed, but you can now use them at runtime also).
            - Much of the functionality that NormalInfo<coords> used to provide
              is now accessible through NormalEncoding(coords).  This
              NormalInfo class has been stripped down to just provide
              "human-readable name" functions.
        Class NormalHypersurface:
            - Normal surfaces now hold a snapshot of the underlying
              triangulation at the time of creation.  The triangulation
              that was originally used can be safely modified or even deleted.